--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../lib/css/bootstrap.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>Semana Paulo Freire - biografia</title>
 </head>
 <body>
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#"><h2>SPF</h2></a>
+            <a class="navbar-brand" href="../index.html"><h2>SPF</h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="biografia.html">Biografia</a>
                 <a class="nav-item nav-link" href="obras.html">Obras</a>
               </div>
@@ -34,6 +34,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="../js/bootstrap.js"></script>
+    <script src="../lib/js/bootstrap.js"></script>
 </body>
 </html>
