--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../lib/css/bootstrap.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="../icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../icon/favicon-16x16.png">
+    <link rel="manifest" href="../icon/site.webmanifest">
+    <link rel="mask-icon" href="../icon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css">
     <title>Semana Paulo Freire - biografia</title>
 </head>
 <body>
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
             <a class="navbar-brand" href="../index.html"><h2>SPF</h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -21,20 +29,28 @@
                 <a class="nav-item nav-link" href="obras.html">Obras</a>
               </div>
             </div>
+            </div>
           </nav>
     </header>
     
-    <main class="d-flex flex-column align-items-center">
-        <div class="title jumbotron jumbotron-fluid">
-            <h1>Biografia</h1>
-            <p>Biografia De Paulo Freire</p>
+    <section class="jumbotron text-center">
+        <div class="container">
+          <h1>Paulo Freire</h1>
+          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+          <p>
+            <a href="#" class="btn btn-primary my-2">Main call to action</a>
+            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          </p>
         </div>
+      </section>
+
+    <main class="d-flex flex-column align-items-center container">
 
         <div class="jumbotron position-relative">
             <h2>Origem</h2>
             <p>Filho de Joaquim Temístocles Freire, um policial militar, e Edeltrudes Neves, uma dona de casa, Paulo Reglus Neves Freire nasceu em Pernambuco, no dia 10 de setembro de 1921. Não único, Freire tinha dois irmãos e uma irmã.</p>
             <div class="card-paulo1 card position-absolute">
-                <img src="../lib/img/paulofreire.jpg" class="card-img-top" alt="Paulo Freire">
+                <img src="../images/paulofreire.jpg" class="card-img-top" alt="Paulo Freire">
             </div>
         </div>
 
@@ -58,18 +74,18 @@
             <p>Em 1944, Paulo Freire se casou com Elza Maria Costa de Oliveira, professora primária, com quem teve cinco filhos.
             Após a morte de sua primeira esposa, casou-se com Ana Maria Araújo Freire, conhecida como Nita Freire, uma ex-aluna do Colégio Oswaldo Cruz.</p>
             <div class="card-paulo2 card position-absolute">
-                <img src="../lib/img/paulofreire3.jpg" class="card-img-top" alt="Paulo Freire">
+                <img src="../images/paulofreire3.jpg" class="card-img-top" alt="Paulo Freire">
             </div>
         </div>
 
-        <div class="jumbotron position-relative" style="top: -5rem; right: -20rem;">
+        <div class="jumbotron position-relative " style="right: -20rem;">
             <h2>Projeto Anticomunismo</h2>
             <p>Inicialmente, a experiência de Freire foi financiada pela "Aliança para o Progresso", do governo dos Estados Unidos, que acreditava que a alfabetização era um caminho para combater o avanço do comunismo no Brasil. O governo militar, no entanto, viu nela um perigo iminente de revolta dos “menos favorecidos”. Isso porque Freire acreditava na educação como ferramenta de transformação social, como forma de reconhecer e reivindicar direitos.
             De acordo com uma reportagem publicada pela ONG Repórter Brasil, muitos atribuíram uma greve dos trabalhadores em Angicos, que reivindicavam carteira de trabalho assinada e repouso semanal, às discussões ocorridas durante a experiência de alfabetização de Paulo Freire. Ao ensinar a escrever a palavra “trabalho”, os professores também levantavam discussões sobre o assunto, e os alunos chegaram inclusive a ler artigos da CLT.
             Um outro ponto sensível aos militares da época tocado por Freire e o Plano Nacional de Alfabetização era o direito ao voto. Na época, apenas quem sabia ler e escrever poderia votar. Ou seja, Paulo Freire estava formando leitores e eleitores críticos.</p>
         </div>
 
-        <div class="jumbotron position-relative" style="top: -18rem; left: -22.8rem;">
+        <div class="jumbotron position-relative" style=" left: -22.8rem;">
             <h2>Método de alfabetização</h2>
             <p>O método alfabetização de Paulo Freire é dividido em três etapas: investigação, tematização e problematização.
             Na primeira etapa, a investigação, o aluno e o professor buscam, no meio vocabular do aluno e da sociedade onde ele vive, as palavras e temas centrais de sua biografia. No município de Angicos, escolheram cerca de 410 palavras, onde foram descobertas através da conversação com os futuros aprendizes. Dessa maneira, os educadores procuram algumas palavras importantes, as quais serão designadas como "Palavras Geradoras", ou seja, palavras que são escolhidas através de uma conversa informal, onde elas servirão como base para os futuros ensinamentos.
@@ -78,12 +94,12 @@
         </div>
             
         <div class="container position-relative">
-            <div class="card-paulo3 card position-absolute">
-                <img src="../lib/img/paulofreire2.jpg" class="card-img-top" alt="Paulo Freire">
+            <div class="card-paulo3 card position-absolute img-3">
+                <img src="../images/paulofreire2.jpg" class="card-img-top" alt="Paulo Freire">
             </div>
         </div>
 
-        <div class="jumbotron position-relative" style="top: -13rem;">
+        <div class="jumbotron position-relative">
             <h2>Exílio em meio à Ditadura Militar</h2>
             <p>Com golpe militar de 1964, Paulo Freire foi acusado de subversão e preso por 72 dias. Após ser libertado, Freire partiu para o exílio no Chile, onde ficou por cinco anos trabalhando no Instituto de Capacitação e Investigação em Reforma Agrária (Icira) e foi onde ele escreveu seu principal e mais famoso livro, "Pedagogia do Oprimido".
             Após esse cinco anos no Chile, o mesmo decidiu, em 1969, ir para os Estados Unidos, onde lecionou por um tempo na Universidade de Harvard, e, depois, para a Suíça, local cujo Freire foi, durante dez anos, consultor especial do Departamento de Educação do Conselho Municipal das Igrejas, em Genebra. 
@@ -107,6 +123,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="../lib/js/bootstrap.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
