--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <a class="nav-item nav-link active" href="index.html">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="./pages/biografia.html">Biografia</a>
                 <a class="nav-item nav-link" href="./pages/obras.html">Obras</a>
+                <a class="nav-item nav-link" href="./pages/album.html">Album</a>
                 <a class="nav-item nav-link" href="#LinhaDoTempo">Linha do tempo</a>
               </div>
             </div>
