--- a/pages/obras.html
+++ b/pages/obras.html
@@ -27,6 +27,7 @@
                 <a class="nav-item nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="biografia.html">Biografia</a>
                 <a class="nav-item nav-link active" href="obras.html">Obras</a>
+                <a class="nav-item nav-link" href="album.html">Album</a>
               </div>
             </div>
           </div>
