Adc. footer nas págs. e ajustes nas citações

--- a/pages/album.html
+++ b/pages/album.html
@@ -152,7 +152,18 @@
     <section id="LinhaDoTempo"></section>
 
     <footer id="footer">
+        <div class="d-flex justify-content-around">
+            <ul class="list-unstyled">
+                <li><a href="../index.html" class="nav-link text-light">Home</a></li>
+                <li><a href="biografia.html" class="nav-link text-light">Biografia</a></li>
+                <li><a href="obras.html" class="nav-link text-light">Obras</a></li>
+                <li><a href="#" class="nav-link active text-light">Album</a></li>
+            </ul>
 
+            <ul class="unstyled">
+                <a href="https://www.cps.sp.gov.br/" class="nav-link text-light">Centro Paula Souza</a>
+            </ul>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
