--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -37,11 +37,7 @@
     <section class="jumbotron text-center">
         <div class="container">
           <h1>Paulo Freire</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-          <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-          </p>
+          <p class="lead text-muted">Trajetória de vida de Paulo Freire</p> 
         </div>
       </section>
 
@@ -126,8 +122,8 @@
           </div>
         </div>
 
-        <div class="quotes container d-flex">
-          <h2>Citações</h2>
+        <div class="quotes container-fluid d-flex">
+          <h2 class="text-center display-4">Citações</h2>
           <div class="card">
             <blockquote class="blockquote">
               <p>"A Educação, qualquer que seja ela, é sempre uma teoria do conhecimento posta em prática."</p>
@@ -201,7 +197,8 @@
             <ul class="list-unstyled">
                 <li><a href="../index.html" class="nav-link text-light">Home</a></li>
                 <li><a href="#" class="nav-link active text-light">Biografia</a></li>
-                <li><a href="obras" class="nav-link text-light">Obras</a></li>
+                <li><a href="obras.html" class="nav-link text-light">Obras</a></li>
+                <li><a href="album.html" class="nav-link text-light">Album</a></li>
             </ul>
     
             <ul class="unstyled">
