--- a/index.html
+++ b/index.html
@@ -40,7 +40,19 @@
     <section id="LinhaDoTempo"></section>
 
     <footer id="footer">
+        <div class="d-flex justify-content-around">
+            <ul class="list-unstyled">
+                <li><a href="#" class="nav-link active text-light">Home</a></li>
+                <li><a href="pages/biografia.html" class="nav-link text-light">Biografia</a></li>
+                <li><a href="pages/obras.html" class="nav-link text-light">Obras</a></li>
+                <li><a href="pages/album.html" class="nav-link text-light">Album</a></li>
 
+            </ul>
+
+            <ul class="unstyled">
+                <a href="https://www.cps.sp.gov.br/" class="nav-link text-light">Centro Paula Souza</a>
+            </ul>
+        </div>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
